--- a/app/globals.css
+++ b/app/globals.css
@@ -15,9 +15,9 @@
     @apply mx-auto max-w-3xl ring-1 bg-zinc-900 ring-zinc-300/20 xl:max-w-5xl min-h-screen p-10
   }
 
-  a {
+  /* a {
     @apply text-blue-400 hover:text-blue-500
-  }
+  } */
 
   button {
     @apply bg-slate-500 hover:bg-slate-600 text-zinc-50 px-4 py-2 rounded-md
